[package]
name = "greenie-auth-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { default-features = false, version = "0.10.0" }
ntex = { version = "0.6.7", features = ["async-std"], default-features = false }
mongodb = { version = "2.5.0", features = ["async-std-runtime"], default-features = false }
redis = { version = "0.23.0", default-features = false }
lazy_static = "1.4.0"
async_once = "0.2.6"
serde = {version = "1.0.163", default-features = false }
serde_json = { default-features = false, version = "1.0.96" }
validator = "0.16.0"
validator_derive = "0.16.0"
regex = { default-features = false, version = "1.8.1" }
uuid = { version = "1.3.3", default-features = false }
rand = { default-features = false, version = "0.8.5" }
bcrypt = { features = ["std"], default-features = false, version = "0.14.0" }
jsonwebtoken = "8.3.0"
ntex-cors = "0.3.0"
dotenv = "0.15.0"
